validator_derive/tests/compile-fail/custom_not_string.stderr
error: proc-macro derive panicked
 --> $DIR/custom_not_string.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Invalid attribute #[validate] on field `s`: invalid argument for `custom` validator: only strings are allowed
